Restore original GameController implementation with all endpoints
- Restore /getCategories with proper response format
- Restore /sendSuccess endpoint with recordComplete and countSuccess
- Restore enhanced /startGame with location selection logic
- Restore /endGame with proper time calculation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>